# rust_socket_chat

./: Cargo.toml  LICENSE  README.md  Readme.md  other_file.txt
src/: handlers.rs  lib.rs  main.rs  models.rs  state.rs
templates/: index.html
